--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "sonner": "^1.4.0",
+    "stripe": "^14.17.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.3",
