--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "resend": "^3.2.0",
     "sonner": "^1.4.0",
     "stripe": "^14.17.0",
     "tailwind-merge": "^2.2.1",
