--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@stripe/stripe-js": "^3.0.3",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
+    "canvas-confetti": "^1.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "isbot": "^4.1.0",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.6.0",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
