--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "remix-serve ./build/index.js",
     "typecheck": "tsc",
     "comp:add": "pnpm dlx shadcn-ui@latest add",
-    "tunnel": "stripe listen --forward-to localhost:3000/webhook"
+    "tunnel": "stripe listen --forward-to localhost:3000/webhook",
+    "prisma:push": "prisma db push",
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -35,6 +37,7 @@
     "lucide-react": "^0.331.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "resend": "^3.2.0",
@@ -42,6 +45,7 @@
     "stripe": "^14.17.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "yup": "^1.3.3",
     "zod": "^3.22.4"
   },
@@ -49,7 +53,9 @@
     "@remix-run/dev": "^2.6.0",
     "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.2.20",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.38.0",
